Fixed images height on mobile

--- a/style.css
+++ b/style.css
@@ -60,8 +60,9 @@ body {
     border: 10px solid white;
     overflow: hidden;
     box-shadow: 0 0.4px 1.6px rgba(0, 0, 0, 0.017), 0 0.9px 3.6px rgba(0, 0, 0, 0.024),
-        0 1.6px 6.3px rgba(0, 0, 0, 0.03), 0 2.5px 10px rgba(0, 0, 0, 0.035), 0 3.9px 15.5px rgba(0, 0, 0, 0.04),
-        0 6px 24.1px rgba(0, 0, 0, 0.046), 0 10px 40px rgba(0, 0, 0, 0.053), 0 20px 80px rgba(0, 0, 0, 0.07);
+        0 1.6px 6.3px rgba(0, 0, 0, 0.03), 0 2.5px 10px rgba(0, 0, 0, 0.035),
+        0 3.9px 15.5px rgba(0, 0, 0, 0.04), 0 6px 24.1px rgba(0, 0, 0, 0.046),
+        0 10px 40px rgba(0, 0, 0, 0.053), 0 20px 80px rgba(0, 0, 0, 0.07);
 }
 
 .phone::before {
@@ -207,6 +208,7 @@ body {
 
 .msg-right-img img {
     width: 40px;
+    height: 40px;
     border-radius: 12px;
     margin-right: 0.65em;
 }
